# sid-llvm

./: Cargo.toml  README.md  flake.nix
src/: ast.rs  main.rs
src/parse/: mod.rs  parse_label.rs  parse_number.rs  parse_template.rs
zig/: build.zig  justfile
zig/src/: llvm_backend.zig  main.zig  parser.zig
zig/src/parse/: lexer.zig  mod.zig  parser.zig  types.zig
